--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,308 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+
+.font-cursive {
+    font-family: cursive;
+}
+
+/* effects (filter) */
+
+/* ----------------------- amazon*/
+.image-container-amazon {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-amazon::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: multiply;
+    background: #00b309;
+    opacity: 1;
+}
+
+.image-container-amazon>img {
+    -webkit-filter: brightness(100%) contrast(100%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    filter: brightness(100%) contrast(100%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+
+/* ----------------------- SummerHeat*/
+.image-container-SummerHeat {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-SummerHeat::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: overlay;
+    background: #fae900;
+    opacity: 0.23;
+}
+
+.image-container-SummerHeat>img {
+    -webkit-filter: brightness(103%) contrast(114%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(122%) sepia(0%);
+    filter: brightness(103%) contrast(114%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(122%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+/* ----------------------- Fever*/
+.image-container-Fever {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-Fever::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: multiply;
+    background: #ff0000;
+    opacity: 0.13;
+}
+
+.image-container-Fever>img {
+    -webkit-filter: brightness(100%) contrast(97%) grayscale(0%) hue-rotate(330deg) invert(0%) opacity(100%) saturate(111%) sepia(0%);
+    filter: brightness(100%) contrast(97%) grayscale(0%) hue-rotate(330deg) invert(0%) opacity(100%) saturate(111%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+/* ----------------------- Ryellow*/
+.image-container-Ryellow {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #fffb00;
+}
+
+.image-container-Ryellow::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: lighten;
+    background: #c90300;
+    opacity: 1;
+}
+
+.image-container-Ryellow>img {
+    -webkit-filter: brightness(100%) contrast(90%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    filter: brightness(100%) contrast(90%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    mix-blend-mode: multiply;
+}
+
+/* ----------------------- */
+
+
+
+/* ----------------------- Icy Water*/
+.image-container-IcyWater {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-IcyWater::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: multiply;
+    background: #00e1fa;
+    opacity: 0.13;
+}
+
+.image-container-IcyWater>img {
+    -webkit-filter: brightness(104%) contrast(104%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(122%) sepia(0%);
+    filter: brightness(104%) contrast(104%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(122%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+
+
+
+
+/* ----------------------- Sweet Sunset*/
+.image-container-SweetSunset {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-SweetSunset::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: multiply;
+    background: #fa00cc;
+    opacity: 0.15;
+}
+
+.image-container-SweetSunset>img {
+    -webkit-filter: contrast(128%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(120%) sepia(0%);
+    filter: contrast(128%) grayscale(0%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(120%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+
+/* ----------------------- Waterness*/
+.image-container-Waterness {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-Waterness::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: hard-light;
+    background: #008efa;
+    opacity: 0.15;
+}
+
+.image-container-Waterness>img {
+    -webkit-filter: contrast(128%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(120%) sepia(0%);
+    filter: contrast(128%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(120%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+
+/* ----------------------- Coal Paper*/
+
+.image-container-CoalPaper {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-CoalPaper::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: darken;
+    background: #7d0000;
+    opacity: 0.1;
+}
+
+.image-container-CoalPaper>img {
+    -webkit-filter: brightness(90%) contrast(125%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(50%);
+    filter: brightness(90%) contrast(125%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(50%);
+    mix-blend-mode: none;
+}
+
+/* ----------------------- */
+
+
+/* ----------------------- Simple Gray*/
+
+
+
+.image-container-SimpleGray {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-SimpleGray::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: none;
+    background: #faaa00;
+    opacity: 0.13;
+}
+
+.image-container-SimpleGray>img {
+    -webkit-filter: contrast(100%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    filter: contrast(100%) grayscale(100%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(100%) sepia(0%);
+    mix-blend-mode: none;
+}
+
+
+/* ----------------------- */
+
+
+/* ----------------------- Space Trip*/
+
+.image-container-SpaceTrip {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    background: #ffffff;
+}
+
+.image-container-SpaceTrip::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    mix-blend-mode: saturation;
+    background: #faaa00;
+    opacity: 1;
+}
+
+.image-container-SpaceTrip>img {
+    -webkit-filter: brightness(100%) contrast(100%) grayscale(50%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(140%) sepia(0%);
+    filter: brightness(100%) contrast(100%) grayscale(50%) hue-rotate(0deg) invert(0%) opacity(100%) saturate(140%) sepia(0%);
+    mix-blend-mode: none;
+}
