--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,9 @@
     font-family: cursive;
 }
 
+.navigation-icons {
+    width: 30px;
+} 
 /* effects (filter) */
 
 /* ----------------------- amazon*/
